--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ pygmentsCodefencesGuessSyntax = true
   homeTitle = "DaisukeFukushima"
   subtitle = "₍˄·͈༝·͈˄₎ ₍˄·͈༝·͈˄₎ ₍˄·͈༝·͈˄₎ฅ˒˒"
   mainSections = ["page"]
-  logo = "img/avatar-icon.png" # Expecting square dimensions
+  logo = "img/icon.png" # Expecting square dimensions
   favicon = "img/favicon.ico"
   dateFormat = "January 2, 2006"
   commit = false
