--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ pygmentsCodefencesGuessSyntax = true
   subtitle = "₍˄·͈༝·͈˄₎ ₍˄·͈༝·͈˄₎ ₍˄·͈༝·͈˄₎ฅ˒˒"
   mainSections = ["page"]
   logo = "img/icon.png" # Expecting square dimensions
-  favicon = "img/favicon.ico"
+  favicon = "img/favicon_kohaku.ico"
   dateFormat = "January 2, 2006"
   commit = false
   rss = true
