--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/beautifulhugo"]
 	path = themes/beautifulhugo
 	url = https://github.com/halogenica/beautifulhugo.git
+[submodule "themes/hugo-dpsg"]
+	path = themes/hugo-dpsg
+	url = https://github.com/pfadfinder-konstanz/hugo-dpsg
