--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 baseurl = 'https://dai08srhg.github.io/portfolio/'
 languageCode = "de"
 DefaultContentLanguage = "de"
-paginate = "10" # Number of posts per page
+
 theme = "hugo-dpsg"
 
 [Params]
@@ -19,12 +19,16 @@ theme = "hugo-dpsg"
   mainSections = ["post", "blog", "news"] # Specify section pages to show on home page and the "Recent articles" widget
   dateformat = "02.01.2006" # Change the format of dates
   favicon = "/img/favicon_kohaku.ico"
+  customCSS = ["css/custom.css"]
+
+[pagination]
+  pagerSize = 10
 
 [Params.Author] # Used in authorbox
   name = ""
 
 [Params.style.vars]
-  highlightColor = "#003056" # Override main theme color
+  highlightColor = "#364a5b" # Override main theme color
 
 [Params.logo]
   image = "img/IMG_1612.PNG" # Logo image. Path relative to "static"
